--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>reveal.js</title>
+		<title>Decentralized collaboration</title>
 
 		<link rel="stylesheet" href="css/reveal.css">
-		<link rel="stylesheet" href="css/theme/black.css">
+		<link rel="stylesheet" href="css/theme/white.css">
 
 		<!-- Theme used for syntax highlighting of code -->
 		<link rel="stylesheet" href="lib/css/zenburn.css">
@@ -20,12 +20,98 @@
 			link.href = window.location.search.match( /print-pdf/gi ) ? 'css/print/pdf.css' : 'css/print/paper.css';
 			document.getElementsByTagName( 'head' )[0].appendChild( link );
 		</script>
+
+                <style>
+                span.highlight-red {
+                        color: red;
+                }
+                </style>
+
 	</head>
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section>Slide 1</section>
-				<section>Slide 2</section>
+				<section>
+                                        <h2>Beyond Bitcoin:</h2>
+                                        <img src="logo-color.svg" style="border: none" width="120px"> 
+                                        <h2>Decentralized collaboration</h2>
+                                </section>
+                                <section>
+                                        <h2>Cloud applications</h2>
+                                        <img src="servers.jpg" style="border: none">
+                                </section>
+                                <section>
+                                        <h2>3 <span class="highlight-red">C</span>loud <span class="highlight-red">C</span>omforts</h2>
+                                        <ul>
+                                                <li><span class="highlight-red">C</span>ost</li>
+                                                <li><span class="highlight-red">C</span>onvenience</li>
+                                                <li><span class="highlight-red">C</span>onvention</li>
+                                        </ul>
+                                </section>
+
+				<section>
+                                        <h2>Cloud is <span class="highlight-red">fiat</span> software</h2>
+                                        <aside class="notes">
+                                                Something goes here
+                                        </aside>
+                                </section>
+                                <section>
+                                        <h2>Era of digital <span class="highlight-red">feudalism</p></h2>
+                                        <span style="background-color: black; color: white; border-radius: 5px; padding: 10px">Information = Data + Code</span>
+                                </section>
+
+                                <section>
+                                        <h2><span style="background-color: lightyellow; border-radius: 5px; padding: 10px">Online</span> is an optical <span class="highlight-red">illusion</span></h2>
+                                </section>
+
+                                <section>
+                                        <h3>Expectation vs Reality</h3>
+                                        <img src="cloud-traffic.png" style="border: none" height="500px">
+                                </section>
+                                <section>
+                                        <h2>3 <span class="highlight-red">C</span>loud <span class="highlight-red">C</span>oncerns</h2>
+                                        <ul>
+                                                <li><span class="highlight-red">C</span>ontrol</li>
+                                                <li><span class="highlight-red">C</span>onnectivity</li>
+                                                <li><span class="highlight-red">C</span>omplexity</li>
+                                        </ul>
+                                </section>
+                                <section>
+                                        <img src="walkaway.jpg" height="500px">
+                                </section>
+                                 <section>
+                                         <h2><span class="highlight-red">Desert</span> computing</h2>
+                                         <img src="desert.jpg" height="500px" style="border: none">
+                                </section>
+
+                                <section>
+                                        <h3>Developed an Issue Tracker...</h3>
+                                        <img src="webui_example.png" height="500px">
+                                </section>
+                                <section data-transition="fade" data-transition-speed="fast">
+                                        <h3>Serverless Information Tracker</h3>
+                                        <img src="sticker.svg" style="border: none" width="400px">
+                                </section>
+                                <section>
+                                        <blockquote style="box-shadow: none">
+                                                SIT enables decentralized, sporadically connected parties to contribute and process shared information
+                                        </blockquote>
+                                </section>
+                                <section>
+                                        <h2>Rethinking Conventions</h2>
+                                </section>
+                                <section>
+                                        <h2>Is it worth the <span class="highlight-red">effort</span>?</h2>
+                                </section>
+                                <section>
+                                        <h2>Tragicomedy of <span class="highlight-red">commons</span></h2>
+                                </section>
+                                <section>
+                                        <h4>Thank you!</h4>
+                                        <p>If you are adventurous, you <span class="highlight-red">know</span> what to do with this:</p>
+                                        <img src="sticker.svg" style="border: none" width="300px">
+                                </section>
+
 			</div>
 		</div>
 
@@ -37,6 +123,7 @@
 			// - https://github.com/hakimel/reveal.js#configuration
 			// - https://github.com/hakimel/reveal.js#dependencies
 			Reveal.initialize({
+                                history: true,
 				dependencies: [
 					{ src: 'plugin/markdown/marked.js' },
 					{ src: 'plugin/markdown/markdown.js' },
